--- a/estilo.css
+++ b/estilo.css
@@ -1,10 +1,14 @@
+* {
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
   font-family: sans-serif;
+  background-color: #f5f5f5;
   display: flex;
   flex-direction: column;
-  min-height: 100vh;
-  background-color: #f5f5f5;
+  height: 100vh;
 }
 
 #menu, #pantallaFinal {
@@ -18,19 +22,19 @@ body {
 }
 
 #juego {
-  flex-grow: 1;
+  flex: 1;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding: 20px;
   text-align: center;
+  padding-bottom: 80px; /* Espacio para los botones */
 }
 
 .frase {
   font-size: 2rem;
   margin-bottom: 20px;
-  min-height: 3em;
+  min-height: 2em;
 }
 
 .resultado {
@@ -43,7 +47,7 @@ body {
   position: fixed;
   bottom: 20px;
   left: 0;
-  right: 0;
+  width: 100%;
   display: flex;
   justify-content: center;
   gap: 20px;
